// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render LocationTab correctly 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item "
    href="#"
  >
    <span>
      Cologne
    </span>
  </a>
</li>
`;

exports[`should render LocationTab with active class correctly 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item tabs__item--active"
    href="#"
  >
    <span>
      Paris
    </span>
  </a>
</li>
`;
